# bookcase-mcp-v2

./: .gitignore  README.md  docker-compose.yml  index.html  install.sh  mcp-exemplo.json  run-container.sh
agent-api-tester/: .tools_state.json  Dockerfile  LICENSE  QUICK_TEST_PROMPT.md  README-GRADIO.md  README.md  gradio_cli_utils.py  gradio_interface.py  gradio_interface.py.backup  install-gradio.sh  mcp_wrapper.sh  pyproject.toml  requirements-gradio.txt  test-api-with-arrays.json
agent-api-tester/.github/workflows/: ci.yml
agent-api-tester/docs/: CLI.md  TESTING_PROMPTS.md  architecture.md
agent-api-tester/examples/: README.md  jsonplaceholder-api.json  url-download-save.md
agent-api-tester/promps/: test-carrier-register.md
agent-api-tester/src/: __init__.py
agent-api-tester/src/api_agent/: __init__.py  cli.py  http_executor.py  mcp_adapter.py  mcp_interceptor.py  mcp_stdio.py  models.py  professional_reports.py  swagger_parser.py  test_generator.py  test_monitor.py  tools_storage.py
agent-api-tester/src/test_results/: session_1757716976.json  session_1757716978.json  session_1757716984.json  session_1757717060.json  session_1757718539.json  session_1757719456.json  session_1757719473.json  session_1757719590.json  session_1757719702.json  session_1757719742.json  session_1757720853.json  session_1757720854.json  session_1757721261.json  session_1757721335.json  session_1757721357.json  session_1757721379.json  session_1757721679.json  session_1757721706.json  session_1757722018.json  session_1757722026.json  session_1757722059.json  session_1757722274.json  session_1757722284.json  session_1757722309.json  session_1757722355.json  session_1757724278.json  session_1757726103.json  session_1757726231.json  session_1757726492.json  session_1757726517.json  session_1757726586.json  session_1757726616.json  session_1757726768.json  session_1757727367.json  session_1757727708.json  session_1757738100.json  session_1757741424.json  session_1757741455.json  session_1757741485.json  session_1757741521.json  (+4 more)
agent-api-tester/test_results/: session_1757751982.json  session_1757751983.json  session_1757801958.json
agent-api-tester/tests/: conftest.py  test_cli.py  test_swagger_parser.py
docker-mcp/: LICENSE  README.md  example_config.json  install.sh  main.py  pyproject.toml  requirements.txt  run_server.sh  test.py
docker-mcp/src/: __init__.py  server.py
mcp-client/: README.md  demo.py  install.sh  pyproject.toml  requirements.txt
mcp-client/agent/: README.md  deepseek_mcp_agent.py  gradio_interface.py  install.sh  requirements.txt  test_agent.sh
mcp-client/examples/: README.md  config.json  simple-config.json  test-config.json
mcp-client/src/mcp_client/: __init__.py  cli.py  client.py  config.py  connection_manager.py  models.py  tool_discovery.py  tool_executor.py
mcp-client/tests/: conftest.py  test_config.py  test_integration.py
mongo-dev-memory-mcp/: README copy.md  README.md  SETUP.md  init_database.py  install.sh  requirements.txt  server-backup.py  server.py  test_server.py
mongo-memory-ui/: Dockerfile  README.md  db.py  install.sh  main.py  requirements.txt  service.py  ui.py
webscaping/: embeddings_cache.json  erpnext-webscaping.py  path_list.json  requirements.txt  v2_erpnext-webscaping.py
work-AI/: answer.instructions.md  salve-project-context.prompts.md
