[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-mcp-server"
version = "1.0.0"
description = "MCP Server para gerenciamento de Docker"
authors = [
    {name = "Docker MCP Team"}
]
dependencies = [
    "mcp>=1.0.0",
    "docker>=7.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]
requires-python = ">=3.8"

[project.scripts]
docker-mcp-server = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

